# OOP_Lab5

./: CMakeLists.txt  README.md  main.cpp
include/: ChunkMemoryResource.h  Vector.h
src/: ChunkMemoryResource.cpp
tests/: tests.cpp
